<resources>
    <string name="app_name">Mathematical Reasoning</string>
    <string name="version_name">Version 1.0.0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="Personal_header">Personal</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="hint_add">ca-app-pub-9095339188186410/5824836857</string>
    <string name="solution_add">ca-app-pub-9095339188186410/5441693477</string>

    <!-- Google Ads Id -->
    <!-- TEST ID ca-app-pub-3940256099942544~3347511713-->

    <string name="string1">The Future Programmers built the Math Reasoning app as a Free app. This SERVICE is provided by
        The Future Programmers at no cost and is intended for use as is.\nThis page is used to inform visitors regarding my policies
        with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\nIf you choose to use
        my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information
        that I collect is used for providing and improving the Service. I will not use or share your information with anyone except
        as described in this Privacy Policy.\nThe terms used in this Privacy Policy have the same meanings as in our Terms and
        Conditions, which is accessible at Math Reasoning unless otherwise defined in this Privacy Policy.</string>

    <string name="string2">For a better experience, while using our Service, I may require you to provide us with certain personally
        identifiable information, including but not limited to (Shubham Singh, Prins Singh). The information that I request will be
        retained on your device and is not collected by me in any way.\nThe app does use third party services that may collect
        information used to identify you.\nLink to privacy policy of third party service providers used by the app</string>

    <string name="log_data">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data 
        and information (through third party products) on your phone called Log Data. This Log Data may include information such as
        your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing 
        my Service, the time and date of your use of the Service, and other statistics.</string>
    
    <string name="cookies">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers.
        These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n
        This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use
        “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies
        and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some
        portions of this Service.</string>

    <string name="service_providers">I may employ third-party companies and individuals due to the following reasons:\n
        To facilitate our Service;\nTo provide the Service on our behalf;\nTo perform Service-related services; or\n
        To assist us in analyzing how our Service is used.\nI want to inform users of this Service that these third parties
        have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However,
        they are obligated not to disclose or use the information for any other purpose.</string>
    
    <string name="security">I value your trust in providing us your Personal Information, thus we are striving to use commercially 
        acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic 
        storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    
    <string name="links_to_other_sites">This Service may contain links to other sites. If you click on a third-party link, you
        will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to
        review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy
        policies, or practices of any third-party sites or services</string>

    <string name="children_privacy">These Services do not address anyone under the age of 13. I do not knowingly collect personally
        identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal
        information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child
        has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>

    <string name="change_to_this_privacy_policy">I may update our Privacy Policy from time to time. Thus, you are advised to review
        this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.\n
        This policy is effective as of 2020-09-23</string>

    <string name="contact_us">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at
        contact.thefutureprogrammers@gmail.com.</string>

</resources>